# crop_classification

./: .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: classification_model.ipynb  image_preprocessing.ipynb  sampling_points_techniques.ipynb
src/cropclassification/classification_model/: crop_classifier.py  model_evaluator.py
src/cropclassification/image_processing/: cdl_reclassifier.py  clouds_remover.py  fmask_processer.py  hls_organizer.py
src/cropclassification/sampling_techniques/: clustered_sampler.py  gridded_sampler.py  random_sampler.py  sample_extracter.py  samples_size_calculator.py  stratified_sampler.py  test_dateset_extracter.py
src/cropclassification/temporal_composites/: cv_calculator.py  date_interval_selector.py  percentiles_calculator.py  spectral_indices_calculator.py
